insert Doc Prices in swagger
